--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <h1>Aprendiendo git</h1>
-    <p>
-        Mis primeros pasos en el versionado de codigo
-    </p>
-    
+    <p>Mis primeros pasos en el versionado de codigo</p>    
 </body>
 </html>
