--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Git y GitHub</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Aprendiendo git</h1>
-    <p>Mis primeros pasos en el versionado de codigo</p>    
+    <p>Mis primeros pasos en el versionado de codigo desde la rama pricipal.</p>    
+    <ul>
+        <li>Elemeto 1</li>
+        <li>Elemeto 2</li>
+        <li>Elemeto 3</li>
+        <li>Elemeto 4</li>
+        <li>Elemeto 5</li>
+    </ul>
 </body>
 </html>
