--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Git y GitHub</title>
-    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Aprendiendo git</h1>
-    <p>Mis primeros pasos en el versionado de codigo desde la rama pricipal.</p>    
-    <ul>
-        <li>Elemeto 1</li>
-        <li>Elemeto 2</li>
-        <li>Elemeto 3</li>
-        <li>Elemeto 4</li>
-        <li>Elemeto 5</li>
-    </ul>
+    <p>Mis primeros pasos en el versionado de codigo, escrito desde la rama html</p>
+
+    <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+        <li>Elemento 5</li>
+    </ol>
+    <script src="index.js"></script>
 </body>
 </html>
