--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <body>
     <h1>Aprendiendo git</h1>
     <p>Mis primeros pasos en el versionado de codigo, escrito desde la rama html</p>
-
+    <h2>Lista de elementos.</h2>
     <ol>
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
         <li>Elemento 4</li>
         <li>Elemento 5</li>
+        <li>Elemento 6</li>
+        <li>Elemento 7</li>
     </ol>
     <script src="index.js"></script>
 </body>
