Agregando estacion del año con fechas de inicio

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <li>Elemento 6</li>
         <li>Elemento 7</li>
     </ol>    
+    <ul>
+        <li>Primavera - 21 de marzo</li>
+        <li>Otoño - 21 de junio</li>
+        <li>Verano - 21 de septiembre</li>
+        <li>Invierno - 21 de diciembre</li>
+    </ul>
 
     <script src="index.js"></script>
 </body>
