Agregando estaciones del año

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <li>Elemento 6</li>
         <li>Elemento 7</li>
     </ol>    
+    <ul>
+        <li>Primavera</li>
+        <li>Otoño</li>
+        <li>Verano</li>
+        <li>Invierno</li>
+    </ul>
 
     <script src="index.js"></script>
 </body>
