Agregando dos parrafos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <li>Verano - 21 de septiembre</li>
         <li>Invierno - 21 de diciembre</li>
     </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis itaque consequuntur repellendus, totam veniam fugit quibusdam, dicta officia, et ducimus impedit non. Quae culpa dicta rem odit, voluptatibus tempora ipsa?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis itaque consequuntur repellendus, totam veniam fugit quibusdam, dicta officia, et ducimus impedit non. Quae culpa dicta rem odit, voluptatibus tempora ipsa?</p>
 
     <script src="index.js"></script>
 </body>
