Actualizando el index.html

--- a/index.html
+++ b/index.html
@@ -6,27 +6,12 @@
     <title>Curso de Git y GitHub</title>
 </head>
 <body>
-    <h1>Aprendiendo git</h1>
-    <p>Mis primeros pasos en el versionado de codigo, escrito desde la rama html</p>
 
-    <h2>Lista de elementos. Aprendiendo a resolver conflictos entre ramas</h2>
-    <ol>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
-        <li>Elemento 5</li>
-        <li>Elemento 6</li>
-        <li>Elemento 7</li>
-    </ol>    
-    <ul>
-        <li>Primavera - 21 de marzo</li>
-        <li>Otoño - 21 de junio</li>
-        <li>Verano - 21 de septiembre</li>
-        <li>Invierno - 21 de diciembre</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis itaque consequuntur repellendus, totam veniam fugit quibusdam, dicta officia, et ducimus impedit non. Quae culpa dicta rem odit, voluptatibus tempora ipsa?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis itaque consequuntur repellendus, totam veniam fugit quibusdam, dicta officia, et ducimus impedit non. Quae culpa dicta rem odit, voluptatibus tempora ipsa?</p>
+    <h1>Aprendiendo Git</h1>
+
+    <p>Mis primeros pasos en el versionado de codigo con Git y GitHub.</p>
+    <p>Quieres dominar el uso de git mira este <a href="https://DevCarlosJGonzalezC.com/git" target="_blank">enlace.</a></p>
+    <img src="../youtube-git/git-flow.png" alt="Flujo basico de git">
 
     <script src="index.js"></script>
 </body>
